karl package Changelog
======================

Unreleased
----------

- Forward compat: use the "repoze.bfg.view.static" helper rather than rolling 
  our own view to serve static files in karl.views.site.

- LP #392561:  get 'content_modified' set correctly on communities when
  adding content.

- LP #391234:  Use a non-forked version of the repoze.who auth_tkt plugin
  (repoze.who 1.0.15, now in the "lemonade" index has the "max age" feature
  which made this fork necessary).
  
- LP #391246:  Removed concept of "vocabularies" as a persistently stored
  thing with indirection.  Placed countries data in core karl package as
  const data.

- LP #390868:  Updated OSI logo.

- LP #384841:  Add 'use_cache' kw argument to CachingCatalog to disable
  cache for particular searches.

- LP #391377: Moved settings such as 'system_email_domain' to karl.ini.

- Stop using a custom KarlSecurityPolicy; this policy was identical to
  the WhoInheritingACLSecurityPolicy in repoze.bfg 0.8+.  Use that one
  instead.

- LP #388096: Made a link to the community delete operation.

- LP #391247: Moved console scripts from the osi package to the karl
  package.  Also added karl/scripting.py and renamed osi.ini to karl.ini.

- LP #391251: Moved osi/utilities to the karl package.

3.2 (2009-06-24)
----------------

- LP #387974:  Made 'edit_acl.html' view reindex context in the 'allowed'
  index, as well as invalidating any cached catalog queries.

- Added a simpler people directory implementation to the KARL core.

- For text index converters that use external programs, added a timeout thread
  to kill hanging processes.  Process is considered hanging after 5 seconds.
  This is to work around an error in wvConvert such that it will hang
  indefinitely for certain inputs.


3.1 (2009-06-16)
----------------

- LP #387390:  Add / enable delete profile view, deleting the corresponding
  user as well.

- LP #336714:  Added optional 'reason' argument to 'logout_view', to enable